# dragonball-sandbox

./: .gitignore
crates/dbs-acpi/src/: acpi.rs  lib.rs  rsdp.rs  sdt.rs
crates/dbs-address-space/src/: layout.rs  region.rs
crates/dbs-arch/: Cargo.toml
crates/dbs-arch/src/x86_64/: regs.rs
crates/dbs-device/src/: resources.rs
crates/dbs-interrupt/: Cargo.toml
crates/dbs-interrupt/src/: lib.rs  manager.rs
crates/dbs-interrupt/src/ioapic/: device.rs  ioapic_status.rs  mod.rs  rdte.rs
crates/dbs-interrupt/src/kvm/: mod.rs  userspace_legacy_irq.rs
crates/dbs-legacy-devices/src/: cmos.rs  lib.rs
crates/dbs-miniball/src/devices/src/legacy/: console_manager.rs
crates/dbs-miniball/src/vmm/src/: vmm.rs
crates/dbs-miniball/src/vmm/src/device_manager/: resource_manager.rs
crates/dbs-pci/: Cargo.toml
crates/dbs-pci/src/: bus.rs  bus_persist.rs  configuration.rs  configuration_persist.rs  device.rs  lib.rs  msi.rs  msi_persist.rs  msix.rs  msix_persist.rs  root_bus.rs  root_bus_persist.rs  root_device.rs  root_device_persist.rs  version_manager.rs
crates/dbs-tdx/: Cargo.toml
crates/dbs-tdx/src/: lib.rs  tdx_ioctls.rs
crates/dbs-tdx/src/td_shim/: hob.rs  metadata.rs  mod.rs
crates/dbs-upcall/: Cargo.toml  README.md
crates/dbs-upcall/src/: dev_mgr_service.rs  lib.rs
crates/dbs-virtio-devices/: Cargo.toml
crates/dbs-virtio-devices/src/: balloon.rs  lib.rs  mem.rs  net.rs
crates/dbs-virtio-devices/src/block/: device.rs
crates/dbs-virtio-devices/src/fs/: device.rs  handler.rs
crates/dbs-virtio-devices/src/vsock/: device.rs  mod.rs
