[package]
name = "dbs-pci"
version = "0.1.0"
authors = ["Samuel Ortiz <sameo@linux.intel.com>", "Liu Jiang <gerry@linux.alibaba.com>"]
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2018"

[dependencies]
downcast-rs = { version = "1.0" }
byteorder = "^1.2.0"
libc = "0.2.60"
log = "0.4.6"

vm-memory = { version = "0.9.0", features = ["backend-mmap"] }
vmm-sys-util = "0.11.0"

dbs-allocator = "0.1.0"
dbs-device = { version = "0.2.0", path = "../dbs-device", features = ["kvm-legacy-irq", "kvm-msi-irq"] }


[dev-dependencies]
kvm-ioctls = "0.11.0"